# python-openskills

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MARKET_USAGE.md  MARKET_USAGE_ZH.md  Makefile  README.md  README_CN.md  README_EN.md  README_ZH.md  dev.bat  dev.sh  install_to_project.bat  install_to_project.sh  market_sources.yaml  pyproject.toml  requirements.txt  setup.py  setup_env.bat  setup_env.sh  test_cli.py
.claude/skills/skill-creator/: .openskills.json  SKILL.md
docs/superpowers/plans/: 2026-05-08-skill-dependency-management.md
docs/superpowers/specs/: 2026-05-08-skill-dependency-management-design.md
marketskills/: github.com_anthropics_skills.json  github.com_zhangCan112_python-openskills.json  zhangCan112_python-openskills.json
openskills/: __init__.py  __main__.py  cli.py  config.py  dependency.py  dirs.py  finder.py  installer.py  market.py  metadata.py  models.py  recommends.py  remover.py  skill_types.py  updater.py  yaml_utils.py
openskills/commands/: __init__.py  compat.py  install.py  list.py  manage.py  market.py  read.py  remove.py  sync.py  update.py
openskills/commands/compat/: __init__.py  config.py  (+2 more)
openskills/utils/: __init__.py  agents_md.py  config.py  dirs.py  market.py  marketplace_skills.py  skill_metadata.py  skills.py  yaml.py
scripts/: collect_market_skills.py
skills/skill-creator/: SKILL.md
tests/: test_cli.py  test_config.py  test_dependency.py  test_dirs.py  test_finder.py  test_installer.py  test_market.py  test_metadata.py  test_models.py  test_recommends.py  test_remover.py  test_updater.py  test_yaml_utils.py
(+35 files in other folders)
