[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openskills"
version = "2.0.0"
description = "Universal skills manager for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "questionary>=2.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
openskills = "openskills.cli:cli"

[tool.setuptools.packages.find]
include = ["openskills*"]

[tool.setuptools.package-data]
openskills = ["data/marketskills/*.json"]
